# over-source

./: .gitignore  README.md
docs/: compiling.md
mp/src/: CMakeLists.txt
mp/src/cmake/: source-base.cmake
mp/src/game/client/: CMakeLists.txt
mp/src/game/server/: CMakeLists.txt
sp/src/: CMakeLists.txt
sp/src/cmake/: project-base.cmake  source-base.cmake  source-directories.cmake
sp/src/fgdlib/: gamedata.cpp  gdclass.cpp  gdvar.cpp  inputoutput.cpp  wckeyvalues.cpp
sp/src/game/client/: CMakeLists.txt  clientmode_shared.cpp
sp/src/game/server/: CMakeLists.txt
sp/src/materialsystem/stdshaders/: CMakeLists.txt
sp/src/public/: chunkfile.cpp  loadcmdline.cpp
sp/src/public/bitmap/: imageformat.h
sp/src/public/fgdlib/: gamedata.h  gdvar.h  inputoutput.h  wckeyvalues.h
sp/src/public/materialsystem/: IShader.h
sp/src/public/tier1/: utlblockmemory.h
sp/src/tier1/: CMakeLists.txt
sp/src/togl/: CMakeLists.txt
sp/src/togl/linuxwin/: cglmbuffer.cpp  cglmprogram.cpp  dx9asmtogl2.cpp  dxabstract.cpp  glentrypoints.cpp  glmgr.cpp  glmgrbasics.cpp
sp/src/utils/common/: mstristrip.cpp  scriplib.cpp  threads.cpp  tools_minidump.cpp  utilmatlib.cpp
sp/src/utils/lzma/: CMakeLists.txt
sp/src/utils/vbsp/: boundbox.cpp  cubemap.cpp  detailobjects.cpp  disp_ivp.cpp  ivp.cpp  leakfile.cpp  manifest.cpp  map.cpp  materialpatch.cpp  staticprop.cpp  vbsp.h  worldvertextransitionfixup.cpp
sp/src/vgui2/vgui_controls/: CMakeLists.txt
sp/src/vpc_scripts/: projects.vgc
